--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
           </p>
           <div class="strength-group">
             <div class="strength">
-              <i class="fas fa-code"></i>
+              <div class="icon">
+                <i class="fas fa-code"></i>
+              </div>
               <h3 class="strength-title">Strength1</h3>
               <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
@@ -64,7 +66,9 @@
               looked up one of the more obscure Latin words, consectetur</p>
             </div>
             <div class="strength">
-              <i class="fas fa-desktop"></i>
+              <div class="icon">
+                <i class="fas fa-desktop"></i>
+              </div>
               <h3 class="strength-title">Strength2</h3>
               <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -72,7 +76,9 @@
               looked up one of the more obscure Latin words, consectetur</p>
             </div>
             <div class="strength">
-              <i class="fas fa-cogs"></i>
+              <div class="icon">
+                <i class="fas fa-cogs"></i>
+              </div>
               <h3 class="strength-title">Strength3</h3>
               <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
