html css finish

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
           </p>
           <div class="production-group">
-            <div class="production bg-1"></div>
-            <div class="production bg-2"></div>
-            <div class="production bg-3"></div>
-            <div class="production bg-4"></div>
-            <div class="production bg-5"></div>
-            <div class="production bg-6"></div>
+            <img class="production bg-1" src="img/sketch.jpg">
+            <img class="production bg-2" src="img/websuku.png">
+            <img class="production bg-3" src="img/write.jpg">
+            <img class="production bg-4" src="img/webcamp.png">
+            <img class="production bg-5" src="img/talk.jpg">
+            <img class="production bg-6" src="img/webcamp-mother.png">
           </div>
         </div>
       </section>
@@ -90,7 +90,7 @@
       </section>
       <section class="profile">
         <div class="container">
-          <h2 class="profile-title">Profile</h2>
+          <h2 class="heading">Profile</h2>
           <p class="heading-text">
             It is a long established fact that a reader will be distracted by the readable<br>
             content of a page when looking at its layout.<br>
@@ -99,13 +99,13 @@
         </div>
         <div class="profile-group">
           <div class="left-content">
-            <div class="my-face"></div>
+            <img class="profile-image" src="img/my-icon.jpg">
           </div>
           <div class="right-content">
             <h3 class="description-title">My Name</h3>
-            <p class="description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. 
-            It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
-            Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, 
+            <p class="description-text">Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+            Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
             looked up one of the more obscure Latin words, consectetur</p>
             <h3 class="description-title">My Skills</h3>
             <p class="description-text">HTML/CSS,JavaScript,JQuery,PhotoShop</p>
@@ -132,9 +132,11 @@
             <div class="right-contact">
               <div class="right-contact-content">
                 <h3 class="description-title">SNS</h3>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-instagram-square"></i>
+                <div class="sns-icon">
+                  <i class="fab fa-facebook-square"></i>
+                  <i class="fab fa-twitter-square"></i>
+                  <i class="fab fa-instagram-square"></i>
+                </div>
               </div>
             </div>
           </div>
